# metronomo-api

./: .gitignore  LICENSE  README.md  compile_proto.sh  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  python-check.yml
docs/: CHANGELOG.md  conf.py  index.rst  publish.sh  start.md
docs/_static/: matomo.js
docs/api/: metronomo.md  ssh.md  top.md  updater.md
metronomo/: __init__.py  ssh.py  tail  updater.py  utils.py
metronomo/_rpc/: metronomo_pb2.py  metronomo_pb2.pyi  metronomo_pb2_grpc.py
